--- a/Test.ipynb
+++ b/Test.ipynb
@@ -43,7 +43,24 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def answer(s):\n",
+    "    translate={}\n",
+    "    i=1\n",
+    "    for x in range(97,123):\n",
+    "        translate[chr(x)]=chr(123-i)\n",
+    "        i+=1\n",
+    "    def translator(lookup, char):\n",
+    "        return lookup[char]\n",
+    "    Sentence_Translated=\"\"\n",
+    "    for i in s:\n",
+    "        if 97<=ord(i)<=123:\n",
+    "            Sentence_Translated+=translator(translate, i)\n",
+    "        else:\n",
+    "            Sentence_Translated+=i\n",
+    "    print(Sentence_Translated)\n",
+    "print(answer(\"vmxibkgrlm\"))"
+   ]
   }
  ],
  "metadata": {
