Updates to Assignment 2

--- a/Test-1.ipynb
+++ b/Test-1.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a Message to Encrypt: Hello World!\n",
+      "The Encrypted Message is: Uryy|-d|yq.\n",
+      "The Decrypted Message is: Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "def problem1(example, rotational_value):\n",
     "    #To Encode the sentence i translate the character values to ascii using the ord command\n",
