--- a/HateCrimes-ElectionResults.ipynb
+++ b/HateCrimes-ElectionResults.ipynb
@@ -2,11 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               County      Crimes  Binary\n",
+      "0           Abbeville    0.000000       1\n",
+      "1            Accomack    0.000000       1\n",
+      "2                 Ada  125.794502       1\n",
+      "3               Adair    7.661873       1\n",
+      "4               Adams  109.974017       1\n",
+      "5             Addison    0.000000       0\n",
+      "6               Aiken    0.000000       1\n",
+      "7             Alachua   47.136543       0\n",
+      "8            Alamance    0.000000       1\n",
+      "9             Alameda  577.136477       0\n",
+      "10            Alamosa    0.000000       0\n",
+      "11             Albany  151.000000       1\n",
+      "12          Albemarle    3.000000       0\n",
+      "13          Alexander    0.000000       1\n",
+      "14            Alfalfa    0.000000       1\n",
+      "15              Alger    0.000000       1\n",
+      "16          Allamakee    0.000000       1\n",
+      "17            Allegan    1.000000       1\n",
+      "18           Allegany    0.000000       1\n",
+      "19          Alleghany    0.000000       1\n",
+      "20          Allegheny  872.201584       0\n",
+      "21              Allen   45.000000       1\n",
+      "22          Allendale    0.000000       0\n",
+      "23             Alpena    0.000000       1\n",
+      "24             Amador    0.000000       1\n",
+      "25            Amherst    0.000000       1\n",
+      "26           Anderson    4.000000       1\n",
+      "27             Andrew    0.000000       1\n",
+      "28            Andrews    0.000000       1\n",
+      "29       Androscoggin   18.279974       1\n",
+      "...               ...         ...     ...\n",
+      "1364             Wood    3.000000       1\n",
+      "1365         Woodbury    0.000000       1\n",
+      "1366         Woodford    4.000000       1\n",
+      "1367         Woodruff    0.000000       1\n",
+      "1368            Woods    0.000000       1\n",
+      "1369          Woodson    0.000000       1\n",
+      "1370         Woodward    2.000000       1\n",
+      "1371        Worcester   90.486177       1\n",
+      "1372            Worth    1.000000       1\n",
+      "1373           Wright    0.000000       1\n",
+      "1374          Wyandot    0.000000       1\n",
+      "1375        Wyandotte    0.000000       0\n",
+      "1376          Wyoming    0.000000       1\n",
+      "1377            Wythe    0.000000       1\n",
+      "1378           Yadkin    0.000000       1\n",
+      "1379           Yakima   58.099293       1\n",
+      "1380          Yamhill    0.000000       1\n",
+      "1381           Yancey    0.000000       1\n",
+      "1382          Yankton    0.000000       1\n",
+      "1383          Yavapai    6.000000       1\n",
+      "1384             Yell    0.000000       1\n",
+      "1385  Yellow Medicine    0.000000       1\n",
+      "1386      Yellowstone   42.000000       1\n",
+      "1387           Yoakum    0.000000       1\n",
+      "1388             Yolo   38.693636       0\n",
+      "1389             York   13.223023       1\n",
+      "1390            Young    0.000000       1\n",
+      "1391             Yuba    1.000000       1\n",
+      "1392             Yuma   20.323510       1\n",
+      "1393           Zavala    0.000000       0\n",
+      "\n",
+      "[1394 rows x 3 columns]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -19,19 +89,19 @@
        "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.011</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   16.85</td> \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   16.23</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 29 Mar 2017</td> <th>  Prob (F-statistic):</th> <td>4.29e-05</td> \n",
+       "  <th>Date:</th>             <td>Mon, 03 Apr 2017</td> <th>  Prob (F-statistic):</th> <td>5.92e-05</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:50:00</td>     <th>  Log-Likelihood:    </th> <td> -12187.</td> \n",
+       "  <th>Time:</th>                 <td>20:28:52</td>     <th>  Log-Likelihood:    </th> <td> -11814.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>  1394</td>      <th>  AIC:               </th> <td>2.438e+04</td>\n",
+       "  <th>No. Observations:</th>      <td>  1394</td>      <th>  AIC:               </th> <td>2.363e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>  1392</td>      <th>  BIC:               </th> <td>2.439e+04</td>\n",
+       "  <th>Df Residuals:</th>          <td>  1392</td>      <th>  BIC:               </th> <td>2.364e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>    \n",
@@ -45,24 +115,24 @@
        "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th> <th>[95.0% Conf. Int.]</th> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Intercept</th> <td>  528.3889</td> <td>  107.769</td> <td>    4.903</td> <td> 0.000</td> <td>  316.982   739.795</td>\n",
+       "  <th>Intercept</th> <td>  408.9367</td> <td>   82.450</td> <td>    4.960</td> <td> 0.000</td> <td>  247.197   570.677</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Binary</th>    <td> -477.5603</td> <td>  116.348</td> <td>   -4.105</td> <td> 0.000</td> <td> -705.796  -249.324</td>\n",
+       "  <th>Binary</th>    <td> -358.5733</td> <td>   89.014</td> <td>   -4.028</td> <td> 0.000</td> <td> -533.189  -183.958</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>3268.122</td> <th>  Durbin-Watson:     </th>   <td>   2.009</td>  \n",
+       "  <th>Omnibus:</th>       <td>3153.681</td> <th>  Durbin-Watson:     </th>   <td>   2.012</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>19233730.543</td>\n",
+       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>14106987.247</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>           <td>22.177</td>  <th>  Prob(JB):          </th>   <td>    0.00</td>  \n",
+       "  <th>Skew:</th>           <td>20.437</td>  <th>  Prob(JB):          </th>   <td>    0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>       <td>576.736</td> <th>  Cond. No.          </th>   <td>    5.13</td>  \n",
+       "  <th>Kurtosis:</th>       <td>494.126</td> <th>  Cond. No.          </th>   <td>    5.13</td>  \n",
        "</tr>\n",
        "</table>"
       ],
@@ -73,23 +143,23 @@
        "==============================================================================\n",
        "Dep. Variable:                 Crimes   R-squared:                       0.012\n",
        "Model:                            OLS   Adj. R-squared:                  0.011\n",
-       "Method:                 Least Squares   F-statistic:                     16.85\n",
-       "Date:                Wed, 29 Mar 2017   Prob (F-statistic):           4.29e-05\n",
-       "Time:                        18:50:00   Log-Likelihood:                -12187.\n",
-       "No. Observations:                1394   AIC:                         2.438e+04\n",
-       "Df Residuals:                    1392   BIC:                         2.439e+04\n",
+       "Method:                 Least Squares   F-statistic:                     16.23\n",
+       "Date:                Mon, 03 Apr 2017   Prob (F-statistic):           5.92e-05\n",
+       "Time:                        20:28:52   Log-Likelihood:                -11814.\n",
+       "No. Observations:                1394   AIC:                         2.363e+04\n",
+       "Df Residuals:                    1392   BIC:                         2.364e+04\n",
        "Df Model:                           1                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "==============================================================================\n",
        "                 coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
        "------------------------------------------------------------------------------\n",
-       "Intercept    528.3889    107.769      4.903      0.000       316.982   739.795\n",
-       "Binary      -477.5603    116.348     -4.105      0.000      -705.796  -249.324\n",
+       "Intercept    408.9367     82.450      4.960      0.000       247.197   570.677\n",
+       "Binary      -358.5733     89.014     -4.028      0.000      -533.189  -183.958\n",
        "==============================================================================\n",
-       "Omnibus:                     3268.122   Durbin-Watson:                   2.009\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         19233730.543\n",
-       "Skew:                          22.177   Prob(JB):                         0.00\n",
-       "Kurtosis:                     576.736   Cond. No.                         5.13\n",
+       "Omnibus:                     3153.681   Durbin-Watson:                   2.012\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         14106987.247\n",
+       "Skew:                          20.437   Prob(JB):                         0.00\n",
+       "Kurtosis:                     494.126   Cond. No.                         5.13\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
@@ -97,7 +167,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,6 +175,7 @@
    "source": [
     "import pandas as pd\n",
     "import statsmodels.formula.api as smf\n",
+    "import numpy as np\n",
     "\n",
     "dfcounty = pd.read_csv('US.csv')\n",
     "df = pd.read_csv('HCS.csv')\n",
@@ -118,13 +189,29 @@
     "dfcrimes=dfnew[['County','Crimes']]\n",
     "dfcrimes2=dfcrimes.groupby(['County'])[['Crimes']].sum().reset_index()\n",
     "dfpres = df2.groupby('County').sum().reset_index()\n",
-    "dfpres2=dfcrimes2.merge(dfpres,on=['County'],how='inner')\n",
+    "CrimesTotal=dfcrimes2.merge(dfpres,on=['County'],how='inner')\n",
     "\n",
+    "dfcpc = pd.merge(dfall,dfcounty,on=['City','State'],how='inner')\n",
+    "dfcpc['Crimes']=dfcpc['1st quarter']+dfcpc['2nd quarter']+dfcpc['3rd quarter']+dfcpc['4th quarter']/(dfcpc['Population']/100000)\n",
+    "dfcrimescpc=dfcpc[['County','Crimes']]\n",
+    "dfcrimescpc2=dfcrimescpc.groupby(['County'])[['Crimes']].sum().reset_index()\n",
+    "dfcpcpres = df2.groupby('County').sum().reset_index()\n",
+    "CrimesCPC=dfcrimescpc2.merge(dfcpcpres,on=['County'],how='inner')\n",
+    "\n",
+    "\n",
+    "print(CrimesCPC)\n",
     "# create a fitted model in one line\n",
-    "lm = smf.ols(formula='Crimes ~ Binary', data=dfpres2).fit()\n",
+    "#lm = smf.ols(formula='Crimes ~ Binary', data=CrimesTotal).fit()\n",
     "\n",
     "# print the coefficients\n",
-    "lm.summary()\n",
+    "#lm.summary()\n",
+    "\n",
+    "\n",
+    "# create a fitted model in one line\n",
+    "lm2 = smf.ols(formula='Crimes ~ Binary', data=CrimesCPC).fit()\n",
+    "\n",
+    "# print the coefficients\n",
+    "lm2.summary()\n",
     "\n",
     "\n",
     "\n"
@@ -134,12 +221,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for index, row in df.iterrows():\n",
-    "    print(mydict[str(row['hash'])])"
+    "logit = smf.Logit(dfpres2['Crimes'], dfpres2['Binary'])\n",
+    "\n",
+    "result = logit.fit()\n",
+    "print(result.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = dfpres2['Crimes']\n",
+    "Y = dfpres2['Binary']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "Xtrain, Xtest, Ytrain, Ytest = train_test_split(X.values,Y.values,random_state=1)\n",
+    "\n",
+    "model = GaussianNB()\n",
+    "model.fit(Xtrain, Ytrain)\n",
+    "y_model = model.predict(Xtest)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(ytest, y_model)"
    ]
   }
  ],
